--- a/index.html
+++ b/index.html
@@ -4,57 +4,7 @@
 <head>
 
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-
-	<style>
-		:root {
-			--teal: hsl(192, 55%, 34%);
-		}
-
-		body {
-			font-family: "Montserrat", sans-serif;
-		}
-
-		header {
-			position: relative;
-		}
-
-		h1 {
-			text-align: center;
-			color: var(--teal);
-		}
-
-		#podcast_cover {
-			position: absolute;
-			left: 0px;
-			width: 100%;
-			height: auto;
-
-		}
-
-		.button {
-			border-style: solid;
-			border-color: var(--teal);
-			color: var(--teal);
-			padding: 20px 34px;
-			text-align: center;
-			text-decoration: none;
-			display: inline-block;
-			font-size: 20px;
-			margin: 4px 2px;
-			cursor: pointer;
-			position: absolute;
-			right: 0px;
-		}
-
-		.flex_grid {
-			display: flex;
-			justify-content: space-between;
-		}
-
-		.col {
-			flex: 1;
-		}
-	</style>
+	<link rel="stylesheet" href="style.css">
 
 </head>
 
