Added social media buttons

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>rAIsing the Bar</title>
+<script src="https://kit.fontawesome.com/1d8fa7ca46.js" crossorigin="anonymous"></script>
 <style>
 /* montserrat-regular - latin */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
@@ -79,6 +80,7 @@ p.style {
     
 </style>
 </head>
+
 <body>
 
 <div>
@@ -97,6 +99,9 @@ p.style {
 
 <div class="footer">
 	<p>©rAIsing 2020</p>
+	<a style="padding-right:10px; color:white;" href="https://www.facebook.com/rAIsing.podcast"><i class="fa fa-facebook"></i></a>
+	<a style="padding-right:10px; color:white;" href="https://www.instagram.com/raising_podcast"><i class="fa fa-instagram"></i></a>
+	<a style="padding-right:10px; color:white;" href="https://twitter.com/rAIsing_podcast"><i class="fa fa-twitter"></i></a>
 </div>
 
 </body>
