Added YouTube logo

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@ p.style {
 	<a style="padding-right:10px; color:white;" href="https://www.facebook.com/rAIsing.podcast"><i class="fa fa-facebook"></i></a>
 	<a style="padding-right:10px; color:white;" href="https://www.instagram.com/raising_podcast"><i class="fa fa-instagram"></i></a>
 	<a style="padding-right:10px; color:white;" href="https://twitter.com/rAIsing_podcast"><i class="fa fa-twitter"></i></a>
+	<a style="padding-right:10px; color:white;" href="https://www.youtube.com/channel/UC_yYSqDEQBUbu79uu8qohQw?view_as=subscriber"><i class="fa fa-youtube"></i></a>
 </div>
 
 </body>
