added team info

--- a/index.html
+++ b/index.html
@@ -1,52 +1,121 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>rAIsing the Bar</title>
-  <script src="https://kit.fontawesome.com/1d8fa7ca46.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="style.css">
+	<script src="https://kit.fontawesome.com/1d8fa7ca46.js" crossorigin="anonymous">
+	</script>
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <header>
-    <img src="white_transp.png" alt="logo" style="width:500px">
+	<header>
+		<img src="white_transp.png" alt="logo" id="logo_img">
     
     <div>
-      <a href="#listen_now" class="button">LISTEN NOW</a>
+      <a href="#listen_now" class="button" id="listen_btn_header">listen now</a>
     </div>
   </header>
 
   <div class="info">
-    <h1>we're rAIsing the bar.</h1>
-    <p id="about">a female-run podcast, we are committed to broadening the AI conversation and sparking discussion around the ethics and controversies surrounding the field today. by making AI more accessible in such an interconnected world, we aspire to foster an interest in AI for as many people as possible.</p>
+    <h1>together, we're rAIsing the bar.</h1>
+    <p class="about">a female-run podcast, rAIsing is committed to broadening the AI conversation and sparking discussion around the ethics and controversies surrounding the field today. by making AI more accessible in such an interconnected world, we aspire to foster an interest in AI for as many people as possible.</p>
+  </div>
+
+  <div class="info">
+    <h1>about the team.</h1>
+    <a class="team_member">Meera Kumar, MA
+      <br>Outreach Team
+      <br>~ puzzles, archery ~
+    </a>
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    <a class="team_member">Koena Jaware, CA
+      <br>Outreach Team
+      <br>~ programming, rock climbing ~
+    </a>
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    <a class="team_member">Stuti Pandey, CA
+      <br>Outreach Team
+      <br>~ singing, guitar ~
+    </a>
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    <a class="team_member">Lauren Zaidel, CA
+      <br>Writing Team
+      <br>~ surfing, running ~
+    </a>
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    <a class="team_member">Tanya Chettri, CA
+      <br>Writing Team
+      <br>~ volleyball, comic strips ~
+    </a>
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    <a class="team_member">Mana Vale, NH
+      <br>Outreach Team
+      <br>~ dancing, singing ~
+    </a>
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    <a class="team_member">Ines, Canada
+      <br>Writing Team
+      <br>~ robotics, soccer ~
+    </a>
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    <a class="team_member">Sianna, CA
+      <br>Writing Team
+      <br>~ computing + art, philosophy ~
+    </a>
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    <a class="team_member">Isha Karim, CA
+      <br>Host
+      <br>~ reading, amateur code-breaking ~
+    </a>
+    &nbsp;
+    &nbsp;
+    &nbsp;
   </div>
   
   <div class="info" id="listen_now">
-    <h1 style="color:white; padding-bottom: 25px">listen now.</h1>
-    <a href="https://open.spotify.com/show/77xQnWfh6Yyy7nOGAc1e8f?si=Ds7-i2bOS2CcGTly_Re-JQ" class="button">Spotify</a>
+    <h1>listen now.</h1>
+    <a target = "_blank" href="https://open.spotify.com/show/77xQnWfh6Yyy7nOGAc1e8f?si=Ds7-i2bOS2CcGTly_Re-JQ" class="button">spotify</a>
     &nbsp;
     &nbsp;
     &nbsp;
-    <a href="https://anchor.fm/raising" class="button">Anchor</a>
+    <a target = "_blank" href="https://anchor.fm/raising" class="button">anchor</a>
     &nbsp;
     &nbsp;
     &nbsp;
-    <a href="https://podcasts.apple.com/us/podcast/raising-the-bar/id1524359470?ign-mpt=uo%3D4" class="button">Apple Podcast</a>
+    <a target = "_blank" href="https://podcasts.apple.com/us/podcast/raising-the-bar/id1524359470?ign-mpt=uo%3D4" class="button">apple podcast</a>
     &nbsp;
     &nbsp;
     &nbsp;
-    <a href="https://podcasts.google.com/feed/aHR0cHM6Ly9hbmNob3IuZm0vcy8yNjYzNDg2MC9wb2RjYXN0L3Jzcw==" class="button">Google Podcast</a>
+    <a target = "_blank" href="https://podcasts.google.com/feed/aHR0cHM6Ly9hbmNob3IuZm0vcy8yNjYzNDg2MC9wb2RjYXN0L3Jzcw==" class="button">google podcast</a>
     &nbsp;
     &nbsp;
     &nbsp;
-    <a href="" class="button">Breaker</a>
+    <a target = "_blank" href="https://www.breaker.audio/raising-the-bar-8" class="button">breaker</a>
   </div> 
           
   <div class="footer">
-    <p>©rAIsing 2020</p>
-    <a style="padding-right:10px; color:white;" href="https://www.facebook.com/rAIsing.podcast"><i class="fa fa-facebook"></i></a>
-    <a style="padding-right:10px; color:white;" href="https://www.instagram.com/raising_podcast"><i class="fa fa-instagram"></i></a>
-    <a style="padding-right:10px; color:white;" href="https://twitter.com/rAIsing_podcast"><i class="fa fa-twitter"></i></a>
-    <a style="padding-right:10px; color:white;" href="https://www.youtube.com/channel/UC_yYSqDEQBUbu79uu8qohQw?view_as=subscriber"><i class="fa fa-youtube"></i></a>
+    <p>©rAIsing 2021</p>
+    <a href="https://www.facebook.com/rAIsing.podcast" target="_blank" class="footer_link"><i class="fa fa-facebook"></i></a>
+    <a href="https://www.instagram.com/raising_podcast" target="_blank" class="footer_link"><i class="fa fa-instagram"></i></a>
+    <a href="https://twitter.com/rAIsing_podcast" target="_blank" class="footer_link"><i class="fa fa-twitter"></i></a>
+    <a href="https://www.youtube.com/channel/UC_yYSqDEQBUbu79uu8qohQw?view_as=subscriber" target="_blank" class="footer_link"><i class="fa fa-youtube"></i></a>
   </div>
 </body>
 </html>
