fixed copyright symbol

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   </div> 
           
   <div class="footer">
-    <p>©rAIsing 2021</p>
+    <p> &copy; rAIsing 2021</p>
     <a href="https://www.facebook.com/rAIsing.podcast" target="_blank" class="footer_link"><i class="fa fa-facebook"></i></a>
     <a href="https://www.instagram.com/raising_podcast" target="_blank" class="footer_link"><i class="fa fa-instagram"></i></a>
     <a href="https://twitter.com/rAIsing_podcast" target="_blank" class="footer_link"><i class="fa fa-twitter"></i></a>
